--- a/index.html
+++ b/index.html
@@ -208,6 +208,6 @@
     &copy; 2025 Amystore. All rights reserved.
   </footer>
 
-  <script src="app.js"></script>
+  <script src="app2.js"></script>
 </body>
 </html>
